# energy-glossary-crawler

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py  base_crawler.py  utils.py
src/crawlers/: __init__.py  abb_glossary.py  pvi_software.py  slb_glossary.py  stepchange_global.py  texas_international.py
tests/: test_crawlers.py
