[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "energy-glossary-crawler"
version = "0.1.0"
description = "A Python crawler for multiple-source oilfield & energy industry glossaries."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Mulxx" },
]
keywords = ["oilfield", "glossary", "crawler", "scraper", "energy", "petroleum"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "tqdm>=4.66.0",
    "urllib3>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/mulxx/energy-glossary-crawler"
Repository = "https://github.com/mulxx/energy-glossary-crawler"
Issues = "https://github.com/mulxx/energy-glossary-crawler/issues"

[project.scripts]
energy-glossary-crawler = "main:run"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
